--- a/Semprarrolar/Semprarrolar.vcxproj.filters
+++ b/Semprarrolar/Semprarrolar.vcxproj.filters
@@ -66,4 +66,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\Desktop\Info\c.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="..\..\..\..\Desktop\Info\l.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
